мало-по-малу делаю

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -2,6 +2,7 @@
   --app-color       : #FFFFFF;
   --background-color: #F1F1F1;
   --dark-blue-color : #3C4387;
+  --hightlight-color: #B0C4DE;
 }
 
 body,
